left align tabulator to allow column resize to function correctly when element is contained in non left aligned parent

--- a/tabulator.less
+++ b/tabulator.less
@@ -35,10 +35,14 @@
 //Tabulator Containing Element
 .tabulator{
 	position: relative;
+
 	border: 1px solid @borderColor;
+
 	background-color: @backgroundColor;
-	overflow:hidden;
+
 	font-size:@textSize;
+	text-align: left;
+	overflow:hidden;
 
 	//column header containing element
 	.tabulator-header{
