--- a/themes/tabulator_autumn.css
+++ b/themes/tabulator_autumn.css
@@ -4,6 +4,7 @@
   background-color: #793109;
   overflow: hidden;
   font-size: 14px;
+  text-align: left;
 }
 .tabulator .tabulator-header {
   position: relative;
