--- a/themes/tabulator_midnight.less
+++ b/themes/tabulator_midnight.less
@@ -39,6 +39,7 @@
 	background-color: @backgroundColor;
 	overflow:hidden;
 	font-size:@textSize;
+	text-align: left;
 
 	//column header containing element
 	.tabulator-header{
