--- a/themes/tabulator_modern.less
+++ b/themes/tabulator_modern.less
@@ -44,6 +44,7 @@
 	background-color: @backgroundColor;
 	overflow:hidden;
 	font-size:@textSize;
+	text-align: left;
 
 	//column header containing element
 	.tabulator-header{
