--- a/themes/tabulator_simple.less
+++ b/themes/tabulator_simple.less
@@ -38,6 +38,7 @@
 	background-color: @backgroundColor;
 	overflow:hidden;
 	font-size:@textSize;
+	text-align: left;
 
 	//column header containing element
 	.tabulator-header{
